--- a/ctown9.ipynb
+++ b/ctown9.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,18 +50,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "hankel = Hankel()\n",
     "pca=RobustPCA()\n",
-    "rank=Rank()\n"
+    "rank=Rank()\n",
+    "rc = Robustcluster()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.50972992, 0.41258049, 0.32011184, ..., 2.05405283, 1.6708231 ,\n",
+       "        1.3164506 ],\n",
+       "       [4.17000151, 4.23136711, 4.16242409, ..., 4.02722645, 3.63809085,\n",
+       "        3.25364065],\n",
+       "       [0.98835397, 0.94177246, 0.8342334 , ..., 2.74812245, 2.98218274,\n",
+       "        3.28323054],\n",
+       "       ...,\n",
+       "       [3.69      , 3.51      , 3.42      , ..., 3.29      , 3.35      ,\n",
+       "        3.46      ],\n",
+       "       [1.45      , 1.04      , 0.9       , ..., 1.92      , 1.96      ,\n",
+       "        1.89      ],\n",
+       "       [3.63      , 3.7       , 3.83      , ..., 4.82      , 4.71      ,\n",
+       "        4.23      ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = df.iloc[:,1].values\n",
+    "X_train = hankel.fit(X_train,60,0.5)\n",
+    "X_train = X_train.T\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centroid,label = rc.fit(X_train,3,.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 60)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "centroid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, ..., 0, 0, 0])"
+       "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +173,7 @@
        "43"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +235,7 @@
        " 'P_J422']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +270,6 @@
       " [0 0 0 ... 0 0 0]]\n",
       "59\n",
       "rank 59\n",
-      "pca iteration- 0\n",
       "2\n",
       "[[1. 0. 0. ... 0. 0. 0.]\n",
       " [0. 1. 0. ... 0. 0. 0.]\n",
@@ -221,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,8 +304,6 @@
      "output_type": "stream",
      "text": [
       "rank 16\n",
-      "pca iteration- 0\n",
-      "pca iteration- 1\n",
       "[[-1.60245393e-01 -1.65135926e-01 -1.62906665e-01 ... -9.42401104e-02\n",
       "  -8.77623727e-02 -1.33383105e-01]\n",
       " [-1.40556246e-01 -1.47071356e-01 -1.44993046e-01 ...  1.14329655e-01\n",
@@ -238,12 +311,12 @@
       " [ 2.92485069e-02 -1.39101949e-02 -2.07686086e-02 ...  2.09562524e-01\n",
       "   2.40054388e-01  1.36860471e-01]\n",
       " ...\n",
-      " [ 0.00000000e+00  1.61338821e-03  2.29254549e-16 ... -8.32667268e-17\n",
-      "  -1.24900090e-16  1.11022302e-16]\n",
-      " [ 0.00000000e+00 -1.15913423e-03  3.12385751e-16 ...  2.22044605e-16\n",
-      "  -2.49800181e-16 -1.11022302e-16]\n",
-      " [ 0.00000000e+00  7.50647593e-17  1.12563983e-16 ...  9.10761959e-17\n",
-      "  -1.89120128e-17  1.69274707e-17]]\n"
+      " [ 0.00000000e+00 -2.91648112e-02 -6.33174069e-17 ...  6.93889390e-17\n",
+      "   0.00000000e+00 -6.93889390e-17]\n",
+      " [ 0.00000000e+00  5.93275040e-01 -1.11022302e-16 ...  5.55111512e-17\n",
+      "  -1.66533454e-16  1.24900090e-16]\n",
+      " [ 0.00000000e+00  1.18126667e-01  2.77555756e-17 ... -2.77555756e-17\n",
+      "   6.93889390e-18 -5.55111512e-17]]\n"
      ]
     }
    ],
@@ -260,9 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'svd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\meepc\\ctown9.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/meepc/ctown9.ipynb#Y164sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m U,sig,V\u001b[39m=\u001b[39msvd(X_train)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'svd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "U,sig,V=svd(X_train)"
    ]
@@ -295,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +388,7 @@
      "evalue": "'break' outside loop (668683560.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [10]\u001b[0;36m\u001b[0m\n\u001b[0;31m    break\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'break' outside loop\n"
+      "\u001b[1;36m  Input \u001b[1;32mIn [12]\u001b[1;36m\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
      ]
     }
    ],
@@ -313,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +413,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
