--- a/tempppppp.ipynb
+++ b/tempppppp.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
@@ -23,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -341,8 +330,8 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATETIME  L_T1  L_T2  L_T3  L_T4  L_T5  L_T6  L_T7   F_PU1  S_PU1   \n",
-       "0     04/07/16 00  2.44  5.24  3.19  4.10  2.86  5.50  4.39   93.63      1  \\\n",
+       "         DATETIME  L_T1  L_T2  L_T3  L_T4  L_T5  L_T6  L_T7   F_PU1  S_PU1  \\\n",
+       "0     04/07/16 00  2.44  5.24  3.19  4.10  2.86  5.50  4.39   93.63      1   \n",
        "1     04/07/16 01  2.66  4.53  3.20  4.18  3.29  5.44  4.53   89.41      1   \n",
        "2     04/07/16 02  3.11  3.66  3.66  4.21  3.87  5.15  3.22   89.88      1   \n",
        "3     04/07/16 03  3.62  3.04  4.17  4.04  3.56  4.98  2.40   88.10      1   \n",
@@ -354,8 +343,8 @@
        "4175  24/12/16 23  1.52  2.52  3.33  2.03  1.69  5.10  1.39  120.02      1   \n",
        "4176  25/12/16 00  1.10  2.12  3.73  2.73  1.58  5.13  1.19  120.33      1   \n",
        "\n",
-       "      ...  P_J256  P_J289  P_J415  P_J302  P_J306  P_J307  P_J317  P_J14   \n",
-       "0     ...   70.00   28.22   85.87   21.69   82.72   21.58   71.99  39.33  \\\n",
+       "      ...  P_J256  P_J289  P_J415  P_J302  P_J306  P_J307  P_J317  P_J14  \\\n",
+       "0     ...   70.00   28.22   85.87   21.69   82.72   21.58   71.99  39.33   \n",
        "1     ...   87.73   24.45   84.87   29.81   86.62   29.81   59.76  42.17   \n",
        "2     ...   89.29   23.90   87.11   29.85   87.64   29.85   58.50  42.00   \n",
        "3     ...   91.98   27.10   68.75   31.60   64.25   31.47   72.30  43.24   \n",
@@ -383,13 +372,14 @@
        "[4177 rows x 45 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('~/data/ctown/dataset04.csv')\n",
+    "df_normal=pd.read_csv('~/data/ctown/dataset03.csv')\n",
     "df"
    ]
   },
@@ -1315,24 +1305,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.47202642, 0.34533133, 0.28639268, 0.56138464, 0.41020283,\n",
-       "       0.16699711, 0.18563333, 0.27665421, 0.35097404, 0.26479238,\n",
-       "       0.36199856, 0.44795111, 0.2035688 ])"
+       "Int64Index([], dtype='int64')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[2027:2027+24-1, ['DATETIME','L_T7','S_PU10','F_PU10','S_PU11','F_PU11','ATT_FLAG']]"
+    "df[df['DATETIME']=='26/11/2016 17'].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j8/y6fbcd556gz5zc9j5h889ts40000gn/T/ipykernel_12826/3319458662.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  df.loc[2027:2027+24-1, ['DATETIME','L_T7','S_PU10','F_PU10','S_PU11','F_PU11','ATT_FLAG']].mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "L_T7         3.344583\n",
+       "S_PU10       0.750000\n",
+       "F_PU10      23.240417\n",
+       "S_PU11       0.000000\n",
+       "F_PU11       0.000000\n",
+       "ATT_FLAG     1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[2027:2027+24-1, ['DATETIME','L_T7','S_PU10','F_PU10','S_PU11','F_PU11','ATT_FLAG']].mean()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# attack 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j8/y6fbcd556gz5zc9j5h889ts40000gn/T/ipykernel_12826/2482691993.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  df_normal.loc[:,['DATETIME','L_T1','S_PU1','F_PU1','S_PU2','F_PU2','P_J269','ATT_FLAG']].mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "L_T1          2.676905\n",
+       "S_PU1         1.000000\n",
+       "F_PU1       100.926032\n",
+       "S_PU2         0.730624\n",
+       "F_PU2        69.464357\n",
+       "P_J269       32.369772\n",
+       "ATT_FLAG      0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_normal.loc[:,['DATETIME','L_T1','S_PU1','F_PU1','S_PU2','F_PU2','P_J269','ATT_FLAG']].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j8/y6fbcd556gz5zc9j5h889ts40000gn/T/ipykernel_12826/2778037769.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  df.loc[2337:2337+59, ['DATETIME','L_T1','S_PU1','F_PU1','S_PU2','F_PU2','P_J269','ATT_FLAG']].mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "L_T1         4.266833\n",
+       "S_PU1        1.000000\n",
+       "F_PU1       89.805167\n",
+       "S_PU2        1.000000\n",
+       "F_PU2       89.821167\n",
+       "P_J269      38.300667\n",
+       "ATT_FLAG     1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[2337:2337+59, ['DATETIME','L_T1','S_PU1','F_PU1','S_PU2','F_PU2','P_J269','ATT_FLAG']].mean()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# attack 5\n"
    ]
   },
   {
@@ -1359,7 +1467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
