--- a/CTown/ctown13.ipynb
+++ b/CTown/ctown13.ipynb
@@ -1425,6 +1425,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/gajendersharma/meepc/CTown/ctown13.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/CTown/ctown13.ipynb#X45sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m li\u001b[39m=\u001b[39m[\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/CTown/ctown13.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m a\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mones(\u001b[39m1\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gajendersharma/meepc/CTown/ctown13.ipynb#X45sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m li[a]\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+     ]
+    }
+   ],
+   "source": [
+    "#temp\n",
+    "li=[4,5,6,7]\n",
+    "a=np.ones(1)\n",
+    "li[a]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
